# DeepSDF

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  common.py  env.yml  evaluate.py  generate_train_test_config_files.py  generate_training_meshes.py  geon_net.py  plot_log.py  preprocess_data.py  reconstruct.py  render_images.py  show_interior_samples.py  train_deep_sdf.py  train_deep_sdf_eik.py  train_geon_net.py
deep_sdf/: mesh.py
examples/chairs/: specs.json
experiments/initial/: spec.json
geon_nets/: __init__.py  data.py  losses.py  mesh.py  train_geon_net.py  utils.py  workspace.py
geon_nets/metrics/: chamfer.py
includes/: Utils.h
networks/: deep_sdf_decoder.py  geon_net.py
notebooks/: existing_code_analysis.ipynb  sampling_result_analysis.ipynb  shapenet.ipynb
src/: PreprocessMesh.cpp  RenderImage.cpp  RenderShaderProgram.cpp  ShaderProgram.cpp  Utils.cpp
utils/: generate_train_test_config_files.py  preprocess_data.py  preprocess_data_from_splits.py  reconstruct.py  show_interior_samples.py
